# fastC

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  captain-definition  compile-time-budget.toml  package-lock.json  specs1.md  specs2.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: budget.yml  ci.yml  cross_compile.yml  fuzz.yml  release.yml
assets/: demo.tape  regenerate-demo.sh
assets/demo_src/: bad.fc  broken.fc  explain_demo.fc  good.fc
assets/demo_src/manifest_demo/: fastc.toml
benchmarks/: run_all.sh
benchmarks/cross-lang/: README.md  results.csv  run.sh
benchmarks/cross-lang/first-compile/: README.md  check_cheatsheet.py  (+8 more)
benchmarks/dep-count/: README.md  results.csv  run.sh
benchmarks/dep-count/rust/: Cargo.toml
benchmarks/dep-count/rust/src/: main.rs
benchmarks/internal/: profile_mono.sh
crates/fastc/: Cargo.toml  README.md
crates/fastc-lsp/: Cargo.toml  README.md
crates/fastc-lsp/src/: diagnostics.rs  main.rs  server.rs  workspace.rs
crates/fastc-playground/: Cargo.toml  README.md
crates/fastc-playground/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/fastc-playground/frontend/src/: App.vue  style.css
crates/fastc-playground/frontend/src/components/: Editor.vue  OutputPanel.vue  Terminal.vue  Toolbar.vue
crates/fastc-playground/frontend/src/stores/: playground.ts
crates/fastc-playground/src/: assets.rs  compiler.rs  config.rs  executor.rs  lib.rs  main.rs  server.rs  session.rs
crates/fastc-playground/src/routes/: api.rs  ws.rs
crates/fastc/fuzz/: .gitignore  Cargo.toml  README.md
crates/fastc/fuzz/fuzz_targets/: check_no_panic.rs  compile_no_panic.rs  discharge_no_panic.rs  parse_no_panic.rs
crates/fastc/src/: annotation_check.rs  bench.rs  build.rs  build_cache.rs  cap_check.rs  caps_summary.rs  db.rs  desugar.rs  driver.rs  fixit.rs  lib.rs  main.rs  module_graph.rs  mono.rs  noalloc_check.rs  prelude.rs  targets.rs  timing.rs
crates/fastc/src/ast/: decl.rs  expr.rs  mod.rs  span.rs  stmt.rs  types.rs
crates/fastc/src/diag/: errors.rs  json.rs  mod.rs
crates/fastc/src/discharge/: cache.rs  callsite.rs  mod.rs  smt.rs  syntactic.rs  tests.rs
crates/fastc/src/emit/: decl.rs  expr.rs  mod.rs  stmt.rs
crates/fastc/src/fmt/: mod.rs  printer.rs
crates/fastc/src/lexer/: mod.rs  token.rs  trivia.rs
crates/fastc/src/lexer/snapshots/: fastc__lexer__tests__binary_operators.snap  fastc__lexer__tests__bitwise_operators.snap  fastc__lexer__tests__builtins.snap  fastc__lexer__tests__comments.snap  fastc__lexer__tests__comparison_operators.snap  fastc__lexer__tests__control_flow.snap  fastc__lexer__tests__let_statement.snap  fastc__lexer__tests__literals.snap  fastc__lexer__tests__logical_operators.snap  fastc__lexer__tests__simple_function.snap  fastc__lexer__tests__struct_definition.snap  fastc__lexer__tests__type_constructors.snap  fastc__lexer__tests__type_keywords.snap  fastc__lexer__tests__underscore_numbers.snap  fastc__lexer__tests__unsafe_keywords.snap
crates/fastc/src/lower/: c_ast.rs  checks.rs  mod.rs  temporaries.rs
crates/fastc/src/p10/: config.rs  mod.rs  report.rs
crates/fastc/src/p10/rules/: control_flow.rs  function_size.rs  loop_bounds.rs  memory.rs  mod.rs  pointers.rs
crates/fastc/src/parser/: decl.rs  expr.rs  mod.rs  stmt.rs  types.rs
crates/fastc/src/resolve/: mod.rs  scope.rs
crates/fastc/src/scaffold/: mod.rs  templates.rs
crates/fastc/src/typecheck/: context.rs  mod.rs  safety.rs
crates/fastc/tests/: annotations_v13.rs  c_interop.rs  cli_module.rs  closure_captures.rs  cross_compile.rs  determinism.rs  discharge.rs  error_golden.rs  fix_subcommand.rs  http_module.rs  incremental.rs  module_headers.rs  reproducibility.rs  source_map.rs  supply_chain.rs  test_blocks.rs
crates/fastc/tests/errors/: parse_error.fc  type_mismatch.fc  undefined_name.fc  unsafe_required.fc
crates/fastc/tests/interop/: enum_test.c  layout_test.c  slice_test.c
crates/fastc/tests/snapshots/: error_golden__parse_error.snap  error_golden__type_mismatch.snap  error_golden__undefined_name.snap  error_golden__unsafe_required.snap
demo/: Dockerfile  README.md  docker-compose.yml
docs/: MANIFESTO.md  agent-features.md  annotations.md  benchmarking.md  capabilities.md  checklist.md  competitive-analysis.md  compile-time-budget.md  contracts.md  cross-compile.md  ecosystem.md  ffi.md  grammar.md  language.md  mcp.md  overview.md  roadmap.md  safety.md  supply-chain.md  testing.md  transpiler.md  v1.0.md
documentation/: mkdocs.yml
documentation/docs/: index.md
examples/: README.md  annotations_demo.fc  builtin_traits.fc  capabilities_demo.fc  cli_demo.fc  closure_demo.fc  concat_lines_findidx_demo.fc  contracts_demo.fc  drop.fc  ensures_demo.fc  enum_example.fc  env_rand_demo.fc  fn_ptr.fc  fs_cap_demo.fc  generic_id.fc  generic_struct.fc  hashmap_demo.fc  hashmap_iter_demo.fc  hashmap_str_demo.fc  hello.fc  http_demo.fc  if_let_example.fc  interop_types.fc  io_demo.fc  io_format_demo.fc  io_stdin_demo.fc  json_encoder_demo.fc  json_tokenizer_demo.fc  launch_set_demo.fc  log_demo.fc  math_demo.fc  math_str_helpers_demo.fc  mem_demo.fc  methods.fc  noalloc_demo.fc  opt_example.fc  overflow_example.fc  pointers.fc  qualified_calls_demo.fc  safety_test.fc  (+24 more)
examples/advanced/: algorithms.fc  bitflags.fc  constants.fc  error_handling.fc  ffi_libc.fc  nng_echo.fc  recursion.fc  state_machine.fc  type_patterns.fc  unsafe_patterns.fc
examples/build-integration/: README.md  hello.fc
examples/build-integration/cmake/: CMakeLists.txt
examples/build-integration/meson/: meson.build
examples/supply_chain_demo/: README.md
examples/tutorials/: 01_hello_world.fc  02_variables.fc  03_functions.fc  04_control_flow.fc  05_arrays_slices.fc  06_pointers.fc  07_optionals.fc  08_results.fc  09_structs.fc  10_enums.fc
runtime/: fastc_runtime.h
scripts/: README.md  bench.sh  check.sh  test.sh
(+199 files in other folders)
