[workspace]
resolver = "2"
members = ["crates/fastc", "crates/fastc-lsp", "crates/fastc-playground"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
repository = "https://github.com/fastc-lang/fastc"
homepage = "https://github.com/fastc-lang/fastc"
documentation = "https://docs.fastc-lang.com"
keywords = ["compiler", "transpiler", "c", "systems-programming", "safe"]
categories = ["compilers", "development-tools"]
