[package]
name = "fastc-playground"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Browser-based IDE and playground for FastC"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md"]

[[bin]]
name = "fastc-playground"
path = "src/main.rs"

[dependencies]
# Core compiler
fastc = { version = "0.1.0", path = "../fastc" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }

# WebSocket
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Session management
uuid = { version = "1", features = ["v4"] }
dashmap = "6"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
libc = "0.2"
