[package]
name = "fastc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A safe C-like language that compiles to C11"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md"]

[[bin]]
name = "fastc"
path = "src/main.rs"

[lib]
name = "fastc"
path = "src/lib.rs"

[dependencies]
# Lexer
logos = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Utilities
indexmap = "2"

# Configuration / manifest parsing
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dependency management
git2 = "0.20"
dirs = "6"

[dev-dependencies]
insta = { version = "1.42", features = ["yaml"] }
trycmd = "0.15"
assert_cmd = "2"
tempfile = "3"
