[package]
name = "dep_count_rust"
version = "0.1.0"
edition = "2021"

# Same toy HTTP-fetch program, but using the typical Rust ecosystem
# stack (reqwest + tokio + serde_json). The point isn't that these
# are bad choices — it's that the *transitive* dep count is large.

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
